--- a/.env.example
+++ b/.env.example
@@ -39,3 +39,7 @@ PGADMIN_PORT=5050
 # File Upload
 MAX_UPLOAD_SIZE=10485760
 UPLOAD_DIR=/app/uploads
+
+# AI (Groq) — omborga kirim uchun rasm tahlili
+GROQ_API_KEY=your-groq-api-key
+GROQ_MODEL=meta-llama/llama-4-scout-17b-16e-instruct
