Barcha o'zgarishlar va .env majburan qo'shildi

--- a/.env
+++ b/.env
@@ -16,6 +16,6 @@ TZ=Asia/Tashkent
 
 
 TELEGRAM_BOT_TOKEN=8381152505:AAFLcMMJ8Z4qhNozCMxTO0KRXuevgLxL9ZA
-GROQ_API_KEY=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
+GROQ_API_KEY=place
 
 
